2008-08-28 Chris Allegretta <chrisa@asty.org>
	* configure.ac, rcfile.c:  Add support for an alternate rcfilename at configure time.  Maybe this
	  should become a command line option some day, but I don't see the need currently.  Start of
	  fix for Savannah bug #24128: Add nanorc support to win32 platform.

2008-08-21 Chris Allegretta <chrisa@asty.org>
	* text.c: Change error messages where we may possibly get into a bad state and urge
	  the user to save when this happens.  Originally by Benno Schulenberg <bensberg@justemail.net>
	* text.c (do_enter):  Fix issue when compiled with --enable-debug, fixes Savannah bug 24092.

2008-08-08 Magnus Granberg <zorry@ume.nu> / Adam Conrad <?>
	* files.c (write_file): Add needed flags to open() calls when writing out files.  Fixes Savannah bug 
	  #23827: Compilation fails with -D_FORTIFY_SOURCE=2

2008-08-08 Chris Allegretta <chrisa@asty.org>
	* files.c (write_file): Check exit code of fclose(), since in certain out of space conditions the OS will
	  happily report successful fwrite()s until you try and close the file.  Fix for Savannah bug
	  #24000: no free space on partition - nano claims successful write - file empty 

GNU nano 2.1.4 - 2008.08.09
2008-08-08 Chris Allegretta <chrisa@asty.org>
	* files.c (write_file): Do not go on and attempt to write the main file if writing the backup file failed,
	  related to Savannah bug 24000.
	* text.c (do_redo): Fix improperly restoring the text when redoing a line split.
        * text.c (add_undo): Fix check for multi-line cut check skips adding other new legit events.

2008-07-23 Chris Allegretta <chrisa@asty.org>
	* text.c: Reset openfile-> to OTHER after an undo or redo so we don't mistakenly
	  mistakenly think this is an update when it's really an add.  Also
          Fix an extra ; after an if statement which makes nano try to free a struct which
          may be NULL

GNU nano 2.1.3 - 2008.08.04
2008-07-23 Chris Allegretta <chrisa@asty.org>