@@ -153,7 +153,7 @@ void color_update(void)
 		 * already. */
 		if (not_compiled) {
 		    e->ext = (regex_t *)nmalloc(sizeof(regex_t));
-		    regcomp(e->ext, e->ext_regex, REG_EXTENDED);
+		    regcomp(e->ext, fixbounds(e->ext_regex), REG_EXTENDED);
 		}
 
 		/* Set colorstrings if we matched the extension
@@ -188,13 +188,13 @@ void color_update(void)
 	 * regexes if we haven't already. */
 	if (tmpcolor->start == NULL) {
 	    tmpcolor->start = (regex_t *)nmalloc(sizeof(regex_t));
-	    regcomp(tmpcolor->start, tmpcolor->start_regex,
+	    regcomp(tmpcolor->start, fixbounds(tmpcolor->start_regex),
 		REG_EXTENDED | (tmpcolor->icase ? REG_ICASE : 0));
 	}
 
 	if (tmpcolor->end_regex != NULL && tmpcolor->end == NULL) {
 	    tmpcolor->end = (regex_t *)nmalloc(sizeof(regex_t));
-	    regcomp(tmpcolor->end, tmpcolor->end_regex,
+	    regcomp(tmpcolor->end, fixbounds(tmpcolor->end_regex),
 		REG_EXTENDED | (tmpcolor->icase ? REG_ICASE : 0));
 	}
     }
