@@ -217,19 +217,19 @@ char *parse_next_regex(char *ptr)
 bool nregcomp(const char *regex, int eflags)
 {
     regex_t preg;
-    int rc = regcomp(&preg, regex, REG_EXTENDED | eflags);
+    const char *r = fixbounds(regex);
+    int rc = regcomp(&preg, r, REG_EXTENDED | eflags);
 
     if (rc != 0) {
 	size_t len = regerror(rc, &preg, NULL, 0);
 	char *str = charalloc(len);
 
 	regerror(rc, &preg, str, len);
-	rcfile_error(N_("Bad regex \"%s\": %s"), regex, str);
+	rcfile_error(N_("Bad regex \"%s\": %s"), r, str);
 	free(str);
     }
 
     regfree(&preg);
-
     return (rc == 0);
 }
 
